--- a/calificacion.html
+++ b/calificacion.html
@@ -13,3 +13,18 @@
     pero es evidente que actualizaron lo que llevan hecho. Hay que actualizarlo 
     para poder continuar con las siguientes semanas. 
 -->
+<!--SEMANA 2 -->
+<!--
+    archivos: 4 archivos. 1 por tema
+    Estructura básica: Doctype, meta, html, head, title, main, aside, footer y body
+    Primera entrada: Article dentro de main. Tenga título, fecha, subtítulo y descripción.
+
+    Archivos: 0/4 = 0
+    Estructura básica: 0/9 = 0
+    Primera Entrada: 0/5 = 0
+    Total= 52.7 pts
+
+    COMENTARIO: NO TIENES NADA, LEE TODO LO QUE TIENE QUE HACER DESDE LA SEMANA 1.
+    TIENES HASTA EL VIERNES 03 PARA MANDARME TODO HASTA LA SEMANA 3
+    CUALQUIER DUDA POR SLACKs
+-->
