--- a/calificacion.html
+++ b/calificacion.html
@@ -28,3 +28,17 @@
     TIENES HASTA EL VIERNES 03 PARA MANDARME TODO HASTA LA SEMANA 3
     CUALQUIER DUDA POR SLACKs
 -->
+<!--SEMANA 3 -->
+<!--
+    Barra de navegación: En cada archivo de tema de de haber <nav></nav>, enlace a index y otros 3 temas.
+    Segunda entrada: Lista invertida de 10. Lista ordenada
+    Tercera entrada: 5 sitios oficiales. Lista desordenada
+
+    Barra de navegación: 0/16 = 0
+    Segunda entrada: 0/4 = 0
+    Tercera Entrada: 0/4 = 0
+    Total= 0 pts
+
+    COMENTARIO: LES FALTAN TODAS LAS SEMANA, VENGA. TIENEN HASTA EL VIERNES 03
+    PARA MADARME TODO
+-->
