--- a/calificacion.html
+++ b/calificacion.html
@@ -42,3 +42,16 @@
     COMENTARIO: LES FALTAN TODAS LAS SEMANA, VENGA. TIENEN HASTA EL VIERNES 03
     PARA MADARME TODO
 -->
+<!--SEMANA 4 -->
+<!--
+    imagen_x_entrada: Que existan 3 imagenes en cada uno de tus archivos antes de los títulos.
+    imagenes_x_ilustración: Que existan 3 imagenes posterior a tu texto, donde esté toda la estructura de <figure>.
+    entrada_4_con_video: Que esté la cuarta entrada, con la estructura de <article> y contenga un video.
+
+    imagen_x_entrada: 0/12 = 0
+    imagenes_x_ilustración 0/12 = 0
+    entrada_4_con_video = 0/12 = 0
+    Total= 0 pts
+
+    COMENTARIO: NO HAY NADA
+-->
